rename bash dir to bin remove save page in GoogleImage example large scale revision of readme